# KOFPe92308ute

./: README.md
server/: pyproject.toml
server/alembic/: env.py
server/alembic/versions/: fa86326ab933_1.py
server/app/: init_db.py  logger.py  main.py
server/app/api/: deps.py
server/app/api/api_v1/: api.py
server/app/api/api_v1/endpoints/: auth.py  random.py
server/app/core/: auth.py  config.py
server/app/crud/: base.py  crud_user.py
server/app/db/: base.py  base_class.py  defaults.py  init_db.py  session.py
server/app/models/: service.py  status.py  user.py
server/app/schemas/: __init__.py  random.py  user.py
server/test/: conftest.py  test_1.py
stats/: go.mod  go.sum  main.go
